--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Vertical Slider</title>
-    <link rel="stylesheet" href="css/swiper-bundle.min.css"/> <!-- Подключаем стили плагина Swiper -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css"/> <!-- Подключаем стили плагина Swiper -->
     <link rel="stylesheet" href="css/main.css"/>
   </head>
   <body>
@@ -14,7 +14,7 @@
           <div class="slider__col">
 
             <div class="slider__thumbs">
-              <div class="swiper-container"> <!-- Слайдер с превью -->
+              <div class="swiper"> <!-- Слайдер с превью -->
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
                     <div class="slider__image"><img src="https://picsum.photos/1920/1080" alt=""/></div>
@@ -32,7 +32,7 @@
           </div>
 
           <div class="slider__images">
-            <div class="swiper-container"> <!-- Слайдер с изображениями -->
+            <div class="swiper"> <!-- Слайдер с изображениями -->
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
                   <div class="slider__image"><img src="https://picsum.photos/1920/1080" alt=""/></div>
@@ -50,7 +50,7 @@
         </div>
       </div>
     </section>
-    <script src="js/swiper-bundle.min.js"></script> <!-- Подключаем js-файл плагина Swiper -->
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script> <!-- Подключаем js-файл плагина Swiper -->
     <script src="js/main.js"></script>
   </body>
 </html>
